@@ -7,3 +7,4 @@
 ( cvs diff -u -r 1.2.2.85 -r 1.2.2.86 configure.ac;  ) > 1.79.1cvs2.patchset
 ( cvs diff -u -r 1.1 -r 1.2 COPYING;  ) > 1.79.1cvs3.patchset
 ( cvs diff -u -r 1.2.2.35 -r 1.2.2.36 src/vcal_folder.c;  cvs diff -u -r 1.1.2.31 -r 1.1.2.32 src/vcal_manager.c;  cvs diff -u -r 1.1.2.28 -r 1.1.2.29 src/vcal_meeting_gtk.c;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 src/vcal_meeting_gtk.h;  cvs diff -u -r 1.1.2.8 -r 1.1.2.9 src/vcal_prefs.c;  ) > 1.79.1cvs4.patchset
+( cvs diff -u -r 1.1.2.29 -r 1.1.2.30 src/vcal_meeting_gtk.c;  ) > 1.79.2cvs1.patchset
